# lockc

./: 404.html  Cargo.toml  Dockerfile  README.md  Vagrantfile  architecture.html  build.rs  configuration.html  containers-do-not-contain.html  index.html  print.html  searchindex.js  searchindex.json
.cargo/: config.toml
.github/workflows/: container-image.yml
contrib/etc/lockc/: lockc.toml
contrib/guestfs/: build.sh  install-lockc.sh  provision.sh
contrib/guestfs/arch/: build.sh  provision.sh
contrib/guestfs/centos/: build.sh  provision.sh
contrib/guestfs/opensuse/: build.sh  provision.sh
contrib/guestfs/provision/: provision.sh
contrib/packer/: .gitignore  control-plane-libvirt.json
contrib/provision/: base.sh  build.sh  k8s-base.sh
contrib/systemd/: containerd.service
contrib/terraform/libvirt/: control-plane.tf  deploy-kubernetes.sh  kubernetes.tf  provision-docker.sh  provision.sh  terraform.tfvars.json.example  variables.tf  worker.tf
contrib/terraform/libvirt/cloud-init/: common.tpl  control-plane.tpl
demos/: index.html  mount.html
developers/: index.html  repositories.html
developers/terraform/: index.html  libvirt.html  openstack.html
docs/src/policies/: file-access.md  mount.md
install/: docker.html  index.html  kubernetes.html
lockc/: Cargo.toml  build.rs
lockc-common/: Cargo.toml
lockc-common/src/: lib.rs
lockc-ebpf/: Cargo.toml
lockc-ebpf/src/: main.rs  maps.rs  vmlinux.rs
lockc-uprobes/src/: lib.rs
lockc/src/: common_ext.rs  communication.rs  docker.rs  fanotify.rs  lib.rs  load.rs  main.rs  maps.rs  runc.rs  settings.rs  sysutils.rs  uprobe_ext.rs  utils.rs
lockc/src/bpf/: limits.h  lockc.bpf.c  map_structs.h  maps.h  policy.h  strutils.h
lockc/src/ebpf/: load.rs  maps.rs  mod.rs  uprobe_ext.rs
policies/: file-access.html  index.html  mount.html  syslog.html
scripts/: entrypoint.sh
src/: lib.rs
src/bpf/: lockc.bpf.c  lockc.skel.rs  map_structs.h  maps.h
terraform/: base-image.html  conf-libvirt.html  custom-kernel.html  index.html  libvirt.html  openstack.html  start-vm.html
tests/: tests.rs
tuning/: index.html
use/: index.html
xtask/: Cargo.toml
xtask/src/: bintar.rs  build_ebpf.rs  codegen.rs  install.rs  main.rs  run.rs
