[package]
name = "lockc-ebpf"
version = "0.1.0"
edition = "2018"

[dependencies]
aya-bpf = { git = "http://github.com/aya-rs/aya", branch = "main" }
aya-bpf-bindings = { git = "http://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
lockc-common = { path = "../lockc-common" }

[[bin]]
name = "lockc"
path = "src/main.rs"

[profile.dev]
panic = "abort"
debug = 1
opt-level = 2
overflow-checks = false
lto = false

[profile.release]
panic = "abort"

[workspace]
members = []
