[package]
name = "lockc"
version = "0.1.4"
authors = ["Michal Rostecki <mrostecki@opensuse.org>"]
edition = "2021"

description = "eBPF-based MAC security audit for container workloads"
repository = "https://github.com/rancher-sandbox/lockc"
keywords = ["bpf", "containers", "ebpf", "linux", "security"]
license = "Apache-2.0 AND GPL-2.0-or-later"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
bincode = "1.3"
bindgen = "0.59"
byteorder = "1.4"
config = { version = "0.11", default-features = false, features = ["toml"] }
ctrlc = "3.2"
dirs = "4.0"
eyre = "0.6.5"
fanotify-rs = { git = "https://github.com/vadorovsky/fanotify-rs", branch = "fix-pid-type" }
futures = "0.3"
goblin = "0.4"
kube = "0.65"
k8s-openapi = { version = "0.13", default-features = false, features = ["v1_21"] }
lazy_static = "1.4"
libc = { version = "0.2", features = ["extra_traits"] }
lockc-common = { path = "../lockc-common", features = ["userspace"] }
log = "0.4"
log4rs = "1.0"
nix = "0.23"
plain = "0.2"
procfs = "0.12"
regex = { version = "1.5", default-features = false, features = ["perf"] }
scopeguard = "1.1"
serde = "1.0"
serde_json = "1.0"
simplelog = "0.11"
sysctl = "0.4"
thiserror = "1.0"
tokio = { version = "1.14", features = ["macros", "process", "rt-multi-thread"] }
uuid = { version = "0.8", default-features = false, features = ["v4"] }
walkdir = "2.3"
which = "4.2"

[dev-dependencies]
tempfile = "3.2.0"
