[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-gen = { git = "http://github.com/aya-rs/aya", branch = "main" }
eyre = "0.6.5"
flate2 = "1.0"
fs_extra = "1.2"
scopeguard = "1.1"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
sudo = "0.6"
tar = "0.4"
tempfile = "3.2"
tera = "1.12"
thiserror = "1.0"
